# runyx_net

./: Cargo.toml  index.html  justfile
client/: Cargo.toml  Makefile.toml
client/src/: app.rs  client_main.rs  main.rs  resources.rs
client/src/systems/: events.rs  init.rs  input.rs  mod.rs  sync.rs  tick.rs  ui.rs
server/: Cargo.toml
server/src/: main.rs  resources.rs  server_main.rs
server/src/systems/: events.rs  init.rs  tick.rs
shared/: Cargo.toml
shared/src/: lib.rs  shared.rs
shared/src/protocol/: auth.rs  color.rs  key_command.rs  position.rs
