[package]
name = "client"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "client"
path = "src/client_main.rs"

[lib]
name = "app"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = [
    "bevy/bevy_winit",
    "bevy/render",
]

[dependencies]
naia-bevy-client ={ git = "https://github.com/naia-lib/naia/", branch = "main"}
bevy_egui = "0.14"
shared = { path = "../shared" }
winit = { version = "0.26" }
rand = { version = "0.8" }
getrandom = { version="0.2", features=["wasm-bindgen"] }
bevy = { version = "0.7.0", default-features=false }
cfg-if = { version = "1.0" }
regex = "1.5"
lazy_static = "1.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }