[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.7.0", default-features = false }
# bevy = { version = "0.7.0", default-features = false, features = ["bevy_core_pipeline", "bevy_render", "bevy_pbr", "x11"] }
shared = { path = "../shared" }
bevy_renet = "0.0.2"
serde = { version = "1.0.117", features = [ "derive" ] } 
bincode = "1.3.1"

[[bin]]
name = "server"
path = "src/server_main.rs"