[package]
name = "server"
version = "0.1.0"
edition = "2021"

[features]
use-udp = [ "naia-bevy-server/use-udp" ]
use-webrtc = [ "naia-bevy-server/use-webrtc" ]

[dependencies]
shared = { path = "../shared" }
naia-bevy-server = "0.10.1"
bevy-inspector-egui = "0.11.0"
bevy = { version = "0.7.0", default-features = false }
# bevy = "0.7"

[[bin]]
name = "server"
path = "src/server_main.rs"